--- a/src/main/webapp/profile.xhtml
+++ b/src/main/webapp/profile.xhtml
@@ -17,5 +17,38 @@
 	</div>
 	<br/>
 	<p:panel><h2>Profile</h2></p:panel>
+
+	<p:panel id="panel">
+		<h:panelGrid columns="2" cellpadding="4">
+			<p:commandButton id="add" value="New profile" actionListener="#{setupBean.save()}" style="background-color: #6B8E23; color: white;"
+							 icon="pi pi-plus" onclick="PF('addProfileDialog').show()" />
+
+			<p:dialog header="Add New Profile" widgetVar="addProfileDialog" modal="true"
+					  showEffect="fade" hideEffect="fade" resizable="false">
+				<h5>Name</h5>
+				<p:inputText style="width: 500px"/>
+
+				<h5>Email</h5>
+				<p:inputText style="width: 500px"/>
+
+				<h5>Profile</h5>
+				<p:selectOneRadio id="profileOptions" value="#{radioView.console}">
+					<f:selectItem itemLabel="User" itemValue="User"/>
+					<f:selectItem itemLabel="Admin" itemValue="Admin"/>
+				</p:selectOneRadio>
+
+				<h5>Password</h5>
+				<p:inputText style="width: 500px"/>
+
+				<br/>
+				<br/>
+
+				<div style="text-align: center;">
+					<p:commandButton id="save" value="Save" actionListener="#{setupBean.save()}" style="width: 250px;"
+									 icon="pi pi-save"/>
+				</div>
+			</p:dialog>
+		</h:panelGrid>
+	</p:panel>
 </h:body>
 </html>
