--- a/src/main/webapp/setup.xhtml
+++ b/src/main/webapp/setup.xhtml
@@ -44,7 +44,7 @@
 					<f:validateDoubleRange minimum="0.01" />
 				</p:inputText>
 				<p:commandButton id="submit" value="Save"
-					action="#{setupBean.save()}" icon="pi pi-save" update="panel"/>
+					action="#{setupBean.save()}" icon="pi pi-save" update="panel" style="background-color: #fc6d81; border: none"/>
 				<p:commandButton id="cancel" value="Cancel" action="home.xhtml"
 					styleClass="ui-button-secondary" icon="pi pi-times" update="panel" />
 			</h:panelGrid>
